Updated code on plots

--- a/Tips Dataset Assignment .ipynb
+++ b/Tips Dataset Assignment .ipynb
@@ -6,8 +6,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd # import pandas"
+    "#### Importing the Required Libraries:"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline #magic command to ensure the plots called are displayed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd # import pandas\n",
+    "import matplotlib.pylot as plt \n",
+    "import seaborn as sns\n",
+    "import scipy.stats as ss\n",
+    "\n",
+    "plt.style.use('ggplot')\n",
+    "plt.rcParams['figure.figsize'] = 14, 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
