Introduction and Background added to provide clarity of notebook for user

--- a/Tips Dataset Assignment .ipynb
+++ b/Tips Dataset Assignment .ipynb
@@ -1,6 +1,54 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Tips Dataset Investigation\n",
+    "## Higher Diploma in Science (Data Analysis) \n",
+    "#### Module: Fundamental of Data Analysis\n",
+    "#### Author: Martina O'Brien\n",
+    "#### Submission Date: 29th November, 2019\n",
+    "\n",
+    "Submitted as part of the requirements for the Higher Diploma in Science (Data Analysis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Table of Contents: \n",
+    "\n",
+    "Introduction to the Project\n",
+    "\n",
+    "Descriptive Analysis of the Dataset\n",
+    "\n",
+    "Regression within the Dataset\n",
+    "\n",
+    "Analysis of the Tips Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introduction to the Tips Dataset\n",
+    "\n",
+    "The \"tips dataset\" is a collection of information from a waiter of the tips that they received over a period of time. There are 244 observations over 7 variables (1)c containing the following numeric and categorical values. \n",
+    "\n",
+    "Categorical Variables: \n",
+    "        - Total Bill\n",
+    "        - Tip\n",
+    "        - Size\n",
+    "\n",
+    "Numeric Variables: \n",
+    "        - Gender\n",
+    "        - Smoker\n",
+    "        - Weekday\n",
+    "        - Time\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
