Added the Introduction to the Project

--- a/Tips Dataset Assignment .ipynb
+++ b/Tips Dataset Assignment .ipynb
@@ -4,11 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tips Dataset Investigation\n",
-    "## Higher Diploma in Science (Data Analysis) \n",
-    "#### Module: Fundamental of Data Analysis\n",
-    "#### Author: Martina O'Brien\n",
-    "#### Submission Date: 29th November, 2019\n",
+    "<a name=\"top\"></a>\n",
+    "# Investigation of numpy.random package <img align=\"right\" src=\"img/gmit_logo.jpg\">\n",
+    "\n",
+    "\n",
+    "_**GMIT Higher Diploma in Science (Data Analysis)**_ <br/>\n",
+    "_**Module:**_ Fundamentals of Data Analytics <br/>\n",
+    "_**Author:**_ Martina O'Brien <br/>\n",
+    "_**Submissiom date:**_ 29th November 2019 <br/>\n",
     "\n",
     "Submitted as part of the requirements for the Higher Diploma in Science (Data Analysis)"
    ]
@@ -34,7 +37,11 @@
    "source": [
     "### Introduction to the Tips Dataset\n",
     "\n",
-    "The \"tips dataset\" is a collection of information from a waiter of the tips that they received over a period of time. There are 244 observations over 7 variables (1)c containing the following numeric and categorical values. \n",
+    "In our society, tipping is often assumed to be an American tradition but the custom actually formally orginates from 18th century English society according to Lynn and Latané (1984) (1). Money would be attached to waiters by patrons \"To Insure Promptness\". Tipping as a research area can inform the information businesses have on consumer satisfaction, motivation for tipping across customer and ultimately increase income for waiters. \n",
+    "\n",
+    "Previous studies on tipping have explored variables that influence tipping such as gender, table size and waiter interaction (2). This discussion on tipping in today's society has become incresingly more important as service charging has become increaingly more popular and equality of distribution of tips is highlighted. \n",
+    "\n",
+    "The \"tips dataset\" is a collection of information from a waiter of the tips that they received over a period of time. There are 244 observations over 7 variables (3) containing the following numeric and categorical values. \n",
     "\n",
     "Categorical Variables: \n",
     "        - Total Bill\n",
@@ -45,62 +52,64 @@
     "        - Gender\n",
     "        - Smoker\n",
     "        - Weekday\n",
-    "        - Time\n"
+    "        - Time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Investigating the Tips Dataset\n",
+    "\n",
+    "To begin investigating the Tips Dataset, the data is imported using the following steps and explored to examining any obvious surprises amongst the variables.\n",
+    "\n",
+    "The libraries that are imported are (4): \n",
+    "\n",
+    "Numpy: for numerical computations\n",
+    "\n",
+    "Pandas: for use with structured or tabular data\n",
+    "\n",
+    "Matplotlib: for data visualisations\n",
+    "\n",
+    "Seaborn: enhanced readability function for data visualisations\n",
+    "\n",
+    "Scipy: general purpose machine learning"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: unrecognized arguments: # magic command to ensure the plots called are displayed\n"
+     ]
+    }
+   ],
    "source": [
-    "#### Importing the Required Libraries:"
+    "%matplotlib inline # magic command to ensure the plots called are displayed"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline #magic command to ensure the plots called are displayed"
+    "#### Importing the Required Libraries:\n",
+    "import numpy as np #importing numpy\n",
+    "import pandas as pd # importing pandas\n",
+    "import matplotlib.pyplot as plt # importing matplotlib\n",
+    "import seaborn as sns # importing seaborn\n",
+    "import scipy.stats as ss # importing scipy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd # import pandas\n",
-    "import matplotlib.pylot as plt \n",
-    "import seaborn as sns\n",
-    "import scipy.stats as ss\n",
-    "\n",
-    "plt.style.use('ggplot')\n",
-    "plt.rcParams['figure.figsize'] = 14, 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv (\"https://raw.githubusercontent.com/martinaobrien/FUNDAMENTALS-OF-DATA-ANALYSIS-Project-2019/master/tips.csv\") \n",
-    "# importing the data set from the url with the notebook"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -816,18 +825,20 @@
        "[244 rows x 7 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = pd.read_csv(\"https://raw.githubusercontent.com/martinaobrien/FUNDAMENTALS-OF-DATA-ANALYSIS-Project-2019/master/tips.csv\") \n",
+    "# importing the data set from the url with the notebook\n",
     "df # display the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +935,7 @@
        "4       24.59  3.61  Female     No  Sun  Dinner     4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1043,7 @@
        "243       18.78  3.00  Female     No  Thur  Dinner     2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1043,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1148,7 @@
        "max     50.810000   10.000000    6.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1148,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1160,7 +1171,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1171,25 +1182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1544af83710>"
+       "<seaborn.axisgrid.PairGrid at 0x245edd20160>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1212,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1226,10 +1228,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1544c731630>"
+       "<seaborn.axisgrid.PairGrid at 0x245ef470e80>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1252,16 +1254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1544cd67160>"
+       "<seaborn.axisgrid.PairGrid at 0x245efc50518>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1284,16 +1286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1544d69d518>"
+       "<seaborn.axisgrid.PairGrid at 0x245f0408940>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1316,16 +1318,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1544dc845c0>"
+       "<seaborn.axisgrid.PairGrid at 0x245f0b999b0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1355,10 +1357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import pandas as pd\n",
     "import sklearn.neighbors as nei\n",
     "import seaborn as sns"
@@ -1366,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1844,7 +1847,7 @@
        "[244 rows x 3 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1855,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1925,7 +1928,7 @@
        "Name: time, Length: 244, dtype: object"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1943,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1952,72 +1955,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
-       "           metric_params=None, n_jobs=None, n_neighbors=5, p=2,\n",
-       "           weights='uniform')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn.fit(inputs, outputs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "total_bill      8.77\n",
-       "tip                2\n",
-       "sex             Male\n",
-       "smoker            No\n",
-       "day              Sun\n",
-       "time          Dinner\n",
-       "size               2\n",
-       "Name: 6, dtype: object"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.loc [6]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['Lunch'], dtype=object)"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "knn.predict ([[8.77, 2, 2]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
