Added in Scatterplot to demonstrate relationship between tips and total bill

--- a/Tips Dataset Assignment .ipynb
+++ b/Tips Dataset Assignment .ipynb
@@ -556,21 +556,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Within this section, the relationship between the total bill and the tip amount is discussed and analysed. "
+    "Within this section, the relationship between the total bill and the tip amount is discussed and analysed  to determine any association or correlation between the variables. It is important to not that correlation does not impy causation. \n",
+    "\n",
+    "This technique is known as regression. Regression can be defined as \"a technique for determining the statistical relationship between two or more variables where a change in a dependent variable is associated with, and depends on, a change in one or more independent variables\" http://www.businessdictionary.com/definition/regression.html. This is important when data is being used to predict an outcome, in this instance the amount of tip that will be given. \n",
+    "\n",
+    "Two variables are associated if there is a relationship between two variables is too strong to be likely to arise simply by chance. This association can be positive (y gets bigger as x get bigger) or negative (y gets smaller as x gets bigger)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Relationship between the tip and the total bill*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2163f48f080>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x2b48aca9940>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -586,10 +597,19 @@
     }
    ],
    "source": [
-    "import seaborn as sns; sns.set()\n",
-    "import matplotlib.pyplot as plt\n",
     "tips = sns.load_dataset(\"tips\")\n",
-    "sns.scatterplot(x=\"total_bill\", y=\"tip\", data=tips)"
+    "sns.scatterplot(x=\"total_bill\", y=\"tip\", data=tips) #Using a scatterplot to view data points between the tips and total bill.\n",
+    "#https://seaborn.pydata.org/generated/seaborn.scatterplot.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above plot provides an overview of the datapoints of the two variables: tips (y axis) and total bill (x axis). \n",
+    "\n",
+    "It is clear from the scatterplot that there is a relationship between the tip and the total bill that is strong. It is inferred that the amount of tip received is related to the total bill paid by the customer through the clustering of dots in an almost diagonal line starting from the zero point. \n",
+    "There are also clear outliers in the data set that occur on both sides of the imagined diagonal line. It is important to be aware of these as they may skew observations made on the data."
    ]
   },
   {
